Update tests and docs

--- a/docs/modules/trino/examples/usage-guide/trino-oidc-auth-snippet.yaml
+++ b/docs/modules/trino/examples/usage-guide/trino-oidc-auth-snippet.yaml
@@ -21,7 +21,7 @@ spec:
     oidc:
       hostname: keycloak.default.svc.cluster.local
       port: 8080
-      rootPath: /realms/stackable
+      rootPath: /realms/stackable/
       scopes:
       - openid
       principalClaim: preferred_username
