--- a/examples/simple-trino-oauth2.yaml
+++ b/examples/simple-trino-oauth2.yaml
@@ -53,7 +53,7 @@ spec:
     oidc:
       hostname: keycloak
       port: 8080
-      rootPath: /realms/stackable
+      rootPath: /realms/stackable/
       scopes: ["openid"]
       principalClaim: preferred_username
 ---
