--- a/deploy/helm/trino-operator/crds/crds.yaml
+++ b/deploy/helm/trino-operator/crds/crds.yaml
@@ -297,6 +297,10 @@ spec:
                         queryMaxMemoryPerNode:
                           nullable: true
                           type: string
+                        requestedSecretLifetime:
+                          description: Request secret (currently only autoTls certificates) lifetime from the secret operator, e.g. `7d`, or `30d`. This can be shortened by the `maxCertificateLifetime` setting on the SecretClass issuing the TLS certificate.
+                          nullable: true
+                          type: string
                         resources:
                           default:
                             cpu:
@@ -564,6 +568,10 @@ spec:
                                 nullable: true
                                 type: string
                               queryMaxMemoryPerNode:
+                                nullable: true
+                                type: string
+                              requestedSecretLifetime:
+                                description: Request secret (currently only autoTls certificates) lifetime from the secret operator, e.g. `7d`, or `30d`. This can be shortened by the `maxCertificateLifetime` setting on the SecretClass issuing the TLS certificate.
                                 nullable: true
                                 type: string
                               resources:
@@ -864,6 +872,10 @@ spec:
                         queryMaxMemoryPerNode:
                           nullable: true
                           type: string
+                        requestedSecretLifetime:
+                          description: Request secret (currently only autoTls certificates) lifetime from the secret operator, e.g. `7d`, or `30d`. This can be shortened by the `maxCertificateLifetime` setting on the SecretClass issuing the TLS certificate.
+                          nullable: true
+                          type: string
                         resources:
                           default:
                             cpu:
@@ -1131,6 +1143,10 @@ spec:
                                 nullable: true
                                 type: string
                               queryMaxMemoryPerNode:
+                                nullable: true
+                                type: string
+                              requestedSecretLifetime:
+                                description: Request secret (currently only autoTls certificates) lifetime from the secret operator, e.g. `7d`, or `30d`. This can be shortened by the `maxCertificateLifetime` setting on the SecretClass issuing the TLS certificate.
                                 nullable: true
                                 type: string
                               resources:
