--- a/deploy/helm/trino-operator/Chart.yaml
+++ b/deploy/helm/trino-operator/Chart.yaml
@@ -1,8 +1,8 @@
 ---
 apiVersion: v2
 name: trino-operator
-version: "24.11.0"
-appVersion: "24.11.0"
+version: "24.11.1-rc1"
+appVersion: "24.11.1-rc1"
 description: The Stackable Operator for Trino
 home: https://github.com/stackabletech/trino-operator
 maintainers:
