--- a/docs/templating_vars.yaml
+++ b/docs/templating_vars.yaml
@@ -3,7 +3,7 @@ helm:
   repo_name: stackable-stable
   repo_url: https://repo.stackable.tech/repository/helm-stable/
 versions:
-  commons: 24.11.0
-  secret: 24.11.0
-  listener: 24.11.0
-  trino: 24.11.0
+  commons: 24.11.1-rc1
+  secret: 24.11.1-rc1
+  listener: 24.11.1-rc1
+  trino: 24.11.1-rc1
