--- a/deploy/helm/trino-operator/crds/crds.yaml
+++ b/deploy/helm/trino-operator/crds/crds.yaml
@@ -400,6 +400,26 @@ spec:
                       default: {}
                       description: '`envOverrides` configure environment variables to be set in the Pods. It is a map from strings to strings - environment variables and the value to set. Read the [environment variable overrides documentation](https://docs.stackable.tech/home/nightly/concepts/overrides#env-overrides) for more information and consult the operator specific usage guide to find out about the product specific environment variables that are available.'
                       type: object
+                    jvmArgumentOverrides:
+                      additionalProperties:
+                        oneOf:
+                          - required:
+                              - argument
+                          - required:
+                              - flag
+                          - required:
+                              - remove
+                        properties:
+                          argument:
+                            type: string
+                          flag:
+                            type: object
+                          remove:
+                            type: object
+                        type: object
+                      default: {}
+                      description: Allows overriding JVM arguments.
+                      type: object
                     podOverrides:
                       default: {}
                       description: In the `podOverrides` property you can define a [PodTemplateSpec](https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.27/#podtemplatespec-v1-core) to override any property that can be set on a Kubernetes Pod. Read the [Pod overrides documentation](https://docs.stackable.tech/home/nightly/concepts/overrides#pod-overrides) for more information.
@@ -672,6 +692,26 @@ spec:
                               type: string
                             default: {}
                             description: '`envOverrides` configure environment variables to be set in the Pods. It is a map from strings to strings - environment variables and the value to set. Read the [environment variable overrides documentation](https://docs.stackable.tech/home/nightly/concepts/overrides#env-overrides) for more information and consult the operator specific usage guide to find out about the product specific environment variables that are available.'
+                            type: object
+                          jvmArgumentOverrides:
+                            additionalProperties:
+                              oneOf:
+                                - required:
+                                    - argument
+                                - required:
+                                    - flag
+                                - required:
+                                    - remove
+                              properties:
+                                argument:
+                                  type: string
+                                flag:
+                                  type: object
+                                remove:
+                                  type: object
+                              type: object
+                            default: {}
+                            description: Allows overriding JVM arguments.
                             type: object
                           podOverrides:
                             default: {}
@@ -975,6 +1015,26 @@ spec:
                       default: {}
                       description: '`envOverrides` configure environment variables to be set in the Pods. It is a map from strings to strings - environment variables and the value to set. Read the [environment variable overrides documentation](https://docs.stackable.tech/home/nightly/concepts/overrides#env-overrides) for more information and consult the operator specific usage guide to find out about the product specific environment variables that are available.'
                       type: object
+                    jvmArgumentOverrides:
+                      additionalProperties:
+                        oneOf:
+                          - required:
+                              - argument
+                          - required:
+                              - flag
+                          - required:
+                              - remove
+                        properties:
+                          argument:
+                            type: string
+                          flag:
+                            type: object
+                          remove:
+                            type: object
+                        type: object
+                      default: {}
+                      description: Allows overriding JVM arguments.
+                      type: object
                     podOverrides:
                       default: {}
                       description: In the `podOverrides` property you can define a [PodTemplateSpec](https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.27/#podtemplatespec-v1-core) to override any property that can be set on a Kubernetes Pod. Read the [Pod overrides documentation](https://docs.stackable.tech/home/nightly/concepts/overrides#pod-overrides) for more information.
@@ -1247,6 +1307,26 @@ spec:
                               type: string
                             default: {}
                             description: '`envOverrides` configure environment variables to be set in the Pods. It is a map from strings to strings - environment variables and the value to set. Read the [environment variable overrides documentation](https://docs.stackable.tech/home/nightly/concepts/overrides#env-overrides) for more information and consult the operator specific usage guide to find out about the product specific environment variables that are available.'
+                            type: object
+                          jvmArgumentOverrides:
+                            additionalProperties:
+                              oneOf:
+                                - required:
+                                    - argument
+                                - required:
+                                    - flag
+                                - required:
+                                    - remove
+                              properties:
+                                argument:
+                                  type: string
+                                flag:
+                                  type: object
+                                remove:
+                                  type: object
+                              type: object
+                            default: {}
+                            description: Allows overriding JVM arguments.
                             type: object
                           podOverrides:
                             default: {}
