--- a/deploy/helm/trino-operator/crds/crds.yaml
+++ b/deploy/helm/trino-operator/crds/crds.yaml
@@ -401,24 +401,27 @@ spec:
                       description: '`envOverrides` configure environment variables to be set in the Pods. It is a map from strings to strings - environment variables and the value to set. Read the [environment variable overrides documentation](https://docs.stackable.tech/home/nightly/concepts/overrides#env-overrides) for more information and consult the operator specific usage guide to find out about the product specific environment variables that are available.'
                       type: object
                     jvmArgumentOverrides:
-                      additionalProperties:
-                        oneOf:
-                          - required:
-                              - argument
-                          - required:
-                              - flag
-                          - required:
-                              - remove
-                        properties:
-                          argument:
-                            type: string
-                          flag:
-                            type: object
-                          remove:
-                            type: object
-                        type: object
-                      default: {}
+                      default:
+                        add: []
+                        remove: []
+                        removeRegex: []
                       description: Allows overriding JVM arguments.
+                      properties:
+                        add:
+                          default: []
+                          items:
+                            type: string
+                          type: array
+                        remove:
+                          default: []
+                          items:
+                            type: string
+                          type: array
+                        removeRegex:
+                          default: []
+                          items:
+                            type: string
+                          type: array
                       type: object
                     podOverrides:
                       default: {}
@@ -694,24 +697,27 @@ spec:
                             description: '`envOverrides` configure environment variables to be set in the Pods. It is a map from strings to strings - environment variables and the value to set. Read the [environment variable overrides documentation](https://docs.stackable.tech/home/nightly/concepts/overrides#env-overrides) for more information and consult the operator specific usage guide to find out about the product specific environment variables that are available.'
                             type: object
                           jvmArgumentOverrides:
-                            additionalProperties:
-                              oneOf:
-                                - required:
-                                    - argument
-                                - required:
-                                    - flag
-                                - required:
-                                    - remove
-                              properties:
-                                argument:
-                                  type: string
-                                flag:
-                                  type: object
-                                remove:
-                                  type: object
-                              type: object
-                            default: {}
+                            default:
+                              add: []
+                              remove: []
+                              removeRegex: []
                             description: Allows overriding JVM arguments.
+                            properties:
+                              add:
+                                default: []
+                                items:
+                                  type: string
+                                type: array
+                              remove:
+                                default: []
+                                items:
+                                  type: string
+                                type: array
+                              removeRegex:
+                                default: []
+                                items:
+                                  type: string
+                                type: array
                             type: object
                           podOverrides:
                             default: {}
@@ -1016,24 +1022,27 @@ spec:
                       description: '`envOverrides` configure environment variables to be set in the Pods. It is a map from strings to strings - environment variables and the value to set. Read the [environment variable overrides documentation](https://docs.stackable.tech/home/nightly/concepts/overrides#env-overrides) for more information and consult the operator specific usage guide to find out about the product specific environment variables that are available.'
                       type: object
                     jvmArgumentOverrides:
-                      additionalProperties:
-                        oneOf:
-                          - required:
-                              - argument
-                          - required:
-                              - flag
-                          - required:
-                              - remove
-                        properties:
-                          argument:
-                            type: string
-                          flag:
-                            type: object
-                          remove:
-                            type: object
-                        type: object
-                      default: {}
+                      default:
+                        add: []
+                        remove: []
+                        removeRegex: []
                       description: Allows overriding JVM arguments.
+                      properties:
+                        add:
+                          default: []
+                          items:
+                            type: string
+                          type: array
+                        remove:
+                          default: []
+                          items:
+                            type: string
+                          type: array
+                        removeRegex:
+                          default: []
+                          items:
+                            type: string
+                          type: array
                       type: object
                     podOverrides:
                       default: {}
@@ -1309,24 +1318,27 @@ spec:
                             description: '`envOverrides` configure environment variables to be set in the Pods. It is a map from strings to strings - environment variables and the value to set. Read the [environment variable overrides documentation](https://docs.stackable.tech/home/nightly/concepts/overrides#env-overrides) for more information and consult the operator specific usage guide to find out about the product specific environment variables that are available.'
                             type: object
                           jvmArgumentOverrides:
-                            additionalProperties:
-                              oneOf:
-                                - required:
-                                    - argument
-                                - required:
-                                    - flag
-                                - required:
-                                    - remove
-                              properties:
-                                argument:
-                                  type: string
-                                flag:
-                                  type: object
-                                remove:
-                                  type: object
-                              type: object
-                            default: {}
+                            default:
+                              add: []
+                              remove: []
+                              removeRegex: []
                             description: Allows overriding JVM arguments.
+                            properties:
+                              add:
+                                default: []
+                                items:
+                                  type: string
+                                type: array
+                              remove:
+                                default: []
+                                items:
+                                  type: string
+                                type: array
+                              removeRegex:
+                                default: []
+                                items:
+                                  type: string
+                                type: array
                             type: object
                           podOverrides:
                             default: {}
