--- a/deploy/helm/trino-operator/crds/crds.yaml
+++ b/deploy/helm/trino-operator/crds/crds.yaml
@@ -405,7 +405,7 @@ spec:
                         add: []
                         remove: []
                         removeRegex: []
-                      description: Allows overriding JVM arguments.
+                      description: Allows overriding JVM arguments. Please read on the [JVM argument overrides documentation](https://docs.stackable.tech/home/nightly/concepts/overrides#jvm-argument-overrides) for details on the usage.
                       properties:
                         add:
                           default: []
@@ -701,7 +701,7 @@ spec:
                               add: []
                               remove: []
                               removeRegex: []
-                            description: Allows overriding JVM arguments.
+                            description: Allows overriding JVM arguments. Please read on the [JVM argument overrides documentation](https://docs.stackable.tech/home/nightly/concepts/overrides#jvm-argument-overrides) for details on the usage.
                             properties:
                               add:
                                 default: []
@@ -1026,7 +1026,7 @@ spec:
                         add: []
                         remove: []
                         removeRegex: []
-                      description: Allows overriding JVM arguments.
+                      description: Allows overriding JVM arguments. Please read on the [JVM argument overrides documentation](https://docs.stackable.tech/home/nightly/concepts/overrides#jvm-argument-overrides) for details on the usage.
                       properties:
                         add:
                           default: []
@@ -1322,7 +1322,7 @@ spec:
                               add: []
                               remove: []
                               removeRegex: []
-                            description: Allows overriding JVM arguments.
+                            description: Allows overriding JVM arguments. Please read on the [JVM argument overrides documentation](https://docs.stackable.tech/home/nightly/concepts/overrides#jvm-argument-overrides) for details on the usage.
                             properties:
                               add:
                                 default: []
