chore: Bump to operator-rs 0.84.0

--- a/deploy/helm/trino-operator/templates/roles.yaml
+++ b/deploy/helm/trino-operator/templates/roles.yaml
@@ -108,6 +108,7 @@ rules:
       - events
     verbs:
       - create
+      - patch
   - apiGroups:
       - {{ include "operator.name" . }}.stackable.tech
     resources:
