--- a/rust/operator-binary/Cargo.toml
+++ b/rust/operator-binary/Cargo.toml
@@ -15,6 +15,7 @@ stackable-trino-crd = { path = "../crd" }
 anyhow.workspace = true
 async-trait.workspace = true
 clap.workspace = true
+const_format.workspace = true
 futures.workspace = true
 indoc.workspace = true
 openssl.workspace = true
