--- a/tests/templates/kuttl/logging/04-install-trino-test-runner.yaml
+++ b/tests/templates/kuttl/logging/04-install-trino-test-runner.yaml
@@ -18,6 +18,6 @@ spec:
       serviceAccount: integration-tests-sa
       containers:
         - name: trino-test-runner
-          image: docker.stackable.tech/stackable/testing-tools:0.2.0-stackable0.0.0-dev
+          image: oci.stackable.tech/sdp/testing-tools:0.2.0-stackable0.0.0-dev
           stdin: true
           tty: true
