--- a/tests/test-definition.yaml
+++ b/tests/test-definition.yaml
@@ -13,15 +13,15 @@
 dimensions:
   - name: trino
     values:
-      - "451"
-      - "455"
+      - 451,oci.stackable.tech/sdp/trino:451-stackable0.0.0-dev
+      - 455,oci.stackable.tech/sdp/trino:455-stackable0.0.0-dev
       # To use a custom image, add a comma and the full name after the product version
-      # - 455,docker.stackable.tech/stackable/trino:455-stackable0.0.0-dev
+      # - 455,oci.stackable.tech/sdp/trino:455-stackable0.0.0-dev
   - name: trino-latest
     values:
-      - "455"
+      - 455,oci.stackable.tech/sdp/trino:455-stackable0.0.0-dev
       # To use a custom image, add a comma and the full name after the product version
-      # - 455,docker.stackable.tech/stackable/trino:455-stackable0.0.0-dev
+      # - 455,oci.stackable.tech/sdp/trino:455-stackable0.0.0-dev
   - name: hive
     values:
       - 3.1.3
