--- a/deploy/helm/trino-operator/crds/crds.yaml
+++ b/deploy/helm/trino-operator/crds/crds.yaml
@@ -298,7 +298,10 @@ spec:
                           nullable: true
                           type: string
                         requestedSecretLifetime:
-                          description: Request secret (currently only autoTls certificates) lifetime from the secret operator, e.g. `7d`, or `30d`. This can be shortened by the `maxCertificateLifetime` setting on the SecretClass issuing the TLS certificate.
+                          description: |-
+                            Request secret (currently only autoTls certificates) lifetime from the secret operator, e.g. `7d`, or `30d`. This can be shortened by the `maxCertificateLifetime` setting on the SecretClass issuing the TLS certificate.
+
+                            Defaults to `15d` for coordinators (as currently a restart kills all running queries) and `1d` for workers.
                           nullable: true
                           type: string
                         resources:
@@ -571,7 +574,10 @@ spec:
                                 nullable: true
                                 type: string
                               requestedSecretLifetime:
-                                description: Request secret (currently only autoTls certificates) lifetime from the secret operator, e.g. `7d`, or `30d`. This can be shortened by the `maxCertificateLifetime` setting on the SecretClass issuing the TLS certificate.
+                                description: |-
+                                  Request secret (currently only autoTls certificates) lifetime from the secret operator, e.g. `7d`, or `30d`. This can be shortened by the `maxCertificateLifetime` setting on the SecretClass issuing the TLS certificate.
+
+                                  Defaults to `15d` for coordinators (as currently a restart kills all running queries) and `1d` for workers.
                                 nullable: true
                                 type: string
                               resources:
@@ -873,7 +879,10 @@ spec:
                           nullable: true
                           type: string
                         requestedSecretLifetime:
-                          description: Request secret (currently only autoTls certificates) lifetime from the secret operator, e.g. `7d`, or `30d`. This can be shortened by the `maxCertificateLifetime` setting on the SecretClass issuing the TLS certificate.
+                          description: |-
+                            Request secret (currently only autoTls certificates) lifetime from the secret operator, e.g. `7d`, or `30d`. This can be shortened by the `maxCertificateLifetime` setting on the SecretClass issuing the TLS certificate.
+
+                            Defaults to `15d` for coordinators (as currently a restart kills all running queries) and `1d` for workers.
                           nullable: true
                           type: string
                         resources:
@@ -1146,7 +1155,10 @@ spec:
                                 nullable: true
                                 type: string
                               requestedSecretLifetime:
-                                description: Request secret (currently only autoTls certificates) lifetime from the secret operator, e.g. `7d`, or `30d`. This can be shortened by the `maxCertificateLifetime` setting on the SecretClass issuing the TLS certificate.
+                                description: |-
+                                  Request secret (currently only autoTls certificates) lifetime from the secret operator, e.g. `7d`, or `30d`. This can be shortened by the `maxCertificateLifetime` setting on the SecretClass issuing the TLS certificate.
+
+                                  Defaults to `15d` for coordinators (as currently a restart kills all running queries) and `1d` for workers.
                                 nullable: true
                                 type: string
                               resources:
