chore: add oci references, merge templating changes (#695)
* replace docker references with oci

* bump op-rs to 0.85

* changelog

* revert test defs

---------

Co-authored-by: Xenia <xeniafischer@hotmail.de>

--- a/tests/test-definition.yaml
+++ b/tests/test-definition.yaml
@@ -16,12 +16,12 @@ dimensions:
       - "451"
       - "455"
       # To use a custom image, add a comma and the full name after the product version
-      # - 455,docker.stackable.tech/stackable/trino:455-stackable0.0.0-dev
+      # - 455,oci.stackable.tech/sdp/trino:455-stackable0.0.0-dev
   - name: trino-latest
     values:
       - "455"
       # To use a custom image, add a comma and the full name after the product version
-      # - 455,docker.stackable.tech/stackable/trino:455-stackable0.0.0-dev
+      # - 455,oci.stackable.tech/sdp/trino:455-stackable0.0.0-dev
   - name: hive
     values:
       - 3.1.3
