--- a/rust/operator-binary/Cargo.toml
+++ b/rust/operator-binary/Cargo.toml
@@ -24,6 +24,7 @@ product-config.workspace = true
 semver.workspace = true
 snafu.workspace = true
 stackable-operator.workspace = true
+stackable-telemetry.workspace = true
 strum.workspace = true
 tokio.workspace = true
 tracing.workspace = true
