--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,6 @@ strum = { version = "0.26", features = ["derive"] }
 tokio = { version = "1.40", features = ["full"] }
 tracing = "0.1"
 
-# [patch."https://github.com/stackabletech/operator-rs.git"]
-# stackable-operator = { git = "https://github.com/stackabletech//operator-rs.git", branch = "main" }
+[patch."https://github.com/stackabletech/operator-rs.git"]
+stackable-operator = { git = "https://github.com/stackabletech//operator-rs.git", branch = "spike/cli-telemetry-options" }
 # stackable-operator = { path = "../operator-rs/crates/stackable-operator" }
