--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,4 +34,5 @@ tracing = "0.1"
 
 [patch."https://github.com/stackabletech/operator-rs.git"]
 stackable-operator = { git = "https://github.com/stackabletech//operator-rs.git", branch = "spike/cli-telemetry-options" }
+stackable-telemetry = { git = "https://github.com/stackabletech//operator-rs.git", branch = "feat/stackable-telemetry-options" }
 # stackable-operator = { path = "../operator-rs/crates/stackable-operator" }
