--- a/deploy/helm/trino-operator/crds/crds.yaml
+++ b/deploy/helm/trino-operator/crds/crds.yaml
@@ -1578,6 +1578,32 @@ spec:
                                   minimum: 0.0
                                   nullable: true
                                   type: integer
+                                region:
+                                  default:
+                                    name: us-east-1
+                                  description: |-
+                                    AWS service API region used by the AWS SDK when using AWS S3 buckets.
+
+                                    This defaults to `us-east-1` and can be ignored if not using AWS S3 buckets.
+
+                                    NOTE: This is not the bucket region, and is used by the AWS SDK to construct endpoints for various AWS service APIs. It is only useful when using AWS S3 buckets.
+
+                                    When using AWS S3 buckets, you can configure optimal AWS service API connections in the following ways: - From **inside** AWS: Use an auto-discovery source (eg: AWS IMDS). - From **outside** AWS, or when IMDS is disabled, explicity set the region name nearest to where the client application is running from.
+                                  oneOf:
+                                    - required:
+                                        - source
+                                    - required:
+                                        - name
+                                  properties:
+                                    name:
+                                      description: 'An explicit region, eg: eu-central-1'
+                                      type: string
+                                    source:
+                                      description: Defer region detection to an auto-discovery mechanism.
+                                      enum:
+                                        - AwsImds
+                                      type: string
+                                  type: object
                                 tls:
                                   description: Use a TLS connection. If not specified no TLS will be used.
                                   nullable: true
@@ -1795,6 +1821,32 @@ spec:
                                   minimum: 0.0
                                   nullable: true
                                   type: integer
+                                region:
+                                  default:
+                                    name: us-east-1
+                                  description: |-
+                                    AWS service API region used by the AWS SDK when using AWS S3 buckets.
+
+                                    This defaults to `us-east-1` and can be ignored if not using AWS S3 buckets.
+
+                                    NOTE: This is not the bucket region, and is used by the AWS SDK to construct endpoints for various AWS service APIs. It is only useful when using AWS S3 buckets.
+
+                                    When using AWS S3 buckets, you can configure optimal AWS service API connections in the following ways: - From **inside** AWS: Use an auto-discovery source (eg: AWS IMDS). - From **outside** AWS, or when IMDS is disabled, explicity set the region name nearest to where the client application is running from.
+                                  oneOf:
+                                    - required:
+                                        - source
+                                    - required:
+                                        - name
+                                  properties:
+                                    name:
+                                      description: 'An explicit region, eg: eu-central-1'
+                                      type: string
+                                    source:
+                                      description: Defer region detection to an auto-discovery mechanism.
+                                      enum:
+                                        - AwsImds
+                                      type: string
+                                  type: object
                                 tls:
                                   description: Use a TLS connection. If not specified no TLS will be used.
                                   nullable: true
@@ -1929,6 +1981,32 @@ spec:
                                   minimum: 0.0
                                   nullable: true
                                   type: integer
+                                region:
+                                  default:
+                                    name: us-east-1
+                                  description: |-
+                                    AWS service API region used by the AWS SDK when using AWS S3 buckets.
+
+                                    This defaults to `us-east-1` and can be ignored if not using AWS S3 buckets.
+
+                                    NOTE: This is not the bucket region, and is used by the AWS SDK to construct endpoints for various AWS service APIs. It is only useful when using AWS S3 buckets.
+
+                                    When using AWS S3 buckets, you can configure optimal AWS service API connections in the following ways: - From **inside** AWS: Use an auto-discovery source (eg: AWS IMDS). - From **outside** AWS, or when IMDS is disabled, explicity set the region name nearest to where the client application is running from.
+                                  oneOf:
+                                    - required:
+                                        - source
+                                    - required:
+                                        - name
+                                  properties:
+                                    name:
+                                      description: 'An explicit region, eg: eu-central-1'
+                                      type: string
+                                    source:
+                                      description: Defer region detection to an auto-discovery mechanism.
+                                      enum:
+                                        - AwsImds
+                                      type: string
+                                  type: object
                                 tls:
                                   description: Use a TLS connection. If not specified no TLS will be used.
                                   nullable: true
