--- a/rust/operator-binary/Cargo.toml
+++ b/rust/operator-binary/Cargo.toml
@@ -21,6 +21,7 @@ openssl.workspace = true
 product-config.workspace = true
 snafu.workspace = true
 stackable-operator.workspace = true
+stackable-versioned.workspace = true
 strum.workspace = true
 tokio.workspace = true
 tracing.workspace = true
