--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["rust/crd", "rust/operator-binary"]
+members = ["rust/operator-binary"]
 resolver = "2"
 
 [workspace.package]
@@ -18,14 +18,13 @@ const_format = "0.2"
 futures = { version = "0.3", features = ["compat"] }
 indoc = "2.0"
 openssl = "0.10"
-pin-project = "1.1"
 rstest = "0.24"
-semver = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_yaml = "0.9"
 snafu = "0.8"
 stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "stackable-operator-0.85.0" }
+stackable-versioned = { git = "https://github.com/stackabletech/operator-rs.git", features = ["k8s"], tag = "stackable-versioned-0.5.0" }
 product-config = { git = "https://github.com/stackabletech/product-config.git", tag = "0.7.0" }
 strum = { version = "0.26", features = ["derive"] }
 tokio = { version = "1.40", features = ["full"] }
