--- a/rust/operator-binary/Cargo.toml
+++ b/rust/operator-binary/Cargo.toml
@@ -10,7 +10,6 @@ publish = false
 build = "build.rs"
 
 [dependencies]
-stackable-trino-crd = { path = "../crd" }
 
 anyhow.workspace = true
 async-trait.workspace = true
@@ -19,18 +18,20 @@ const_format.workspace = true
 futures.workspace = true
 indoc.workspace = true
 openssl.workspace = true
-pin-project.workspace = true
 product-config.workspace = true
-semver.workspace = true
 snafu.workspace = true
 stackable-operator.workspace = true
+stackable-versioned.workspace = true
 strum.workspace = true
 tokio.workspace = true
 tracing.workspace = true
 serde_yaml.workspace = true
+serde.workspace = true
+serde_json.workspace = true
 
 [dev-dependencies]
 rstest.workspace = true
+serde_yaml.workspace = true
 
 [build-dependencies]
 built.workspace = true
