--- a/deploy/helm/trino-operator/crds/crds.yaml
+++ b/deploy/helm/trino-operator/crds/crds.yaml
@@ -1985,6 +1985,17 @@ spec:
                       description: A [TPC-H](https://docs.stackable.tech/home/nightly/trino/usage-guide/catalogs/tpch) connector.
                       type: object
                   type: object
+                experimentalConfigRemovals:
+                  default: []
+                  description: |-
+                    List of config properties which should be removed.
+
+                    This is helpful, because Trino fails to start in case you have any unused config properties. The removals are executed after the `configOverrides`.
+
+                    This field is experimental, as ideally some general solution for the removal of properties is found and added to configOverrides. This mechanism would replace this field.
+                  items:
+                    type: string
+                  type: array
               required:
                 - connector
               type: object
