feat: Support removing properties from catalogs (#713)
* feat: Support removing properties from catalogs

* changelog

* Add docs

* Improve docs

* fix merge conflicts

* Apply suggestions from code review

Co-authored-by: Malte Sander <malte.sander.it@gmail.com>

* charts

---------

Co-authored-by: Malte Sander <malte.sander.it@gmail.com>

--- a/deploy/helm/trino-operator/crds/crds.yaml
+++ b/deploy/helm/trino-operator/crds/crds.yaml
@@ -2027,6 +2027,17 @@ spec:
                       description: A [TPC-H](https://docs.stackable.tech/home/nightly/trino/usage-guide/catalogs/tpch) connector.
                       type: object
                   type: object
+                experimentalConfigRemovals:
+                  default: []
+                  description: |-
+                    List of config properties which should be removed.
+
+                    This is helpful, because Trino fails to start in case you have any unused config properties. The removals are executed after the `configOverrides`.
+
+                    This field is experimental, and might be replaced by a more generic mechanism to edit config properties
+                  items:
+                    type: string
+                  type: array
               required:
                 - connector
               type: object
