chore: expand opa-authorization test to run with all trino versions

--- a/tests/test-definition.yaml
+++ b/tests/test-definition.yaml
@@ -106,7 +106,7 @@ tests:
       - openshift
   - name: opa-authorization
     dimensions:
-      - trino-latest
+      - trino
       - hive-latest
       - opa
       - keycloak
