--- a/rust/operator-binary/Cargo.toml
+++ b/rust/operator-binary/Cargo.toml
@@ -10,6 +10,10 @@ publish = false
 build = "build.rs"
 
 [dependencies]
+product-config.workspace = true
+stackable-operator.workspace = true
+stackable-telemetry.workspace = true
+stackable-versioned.workspace = true
 
 anyhow.workspace = true
 async-trait.workspace = true
@@ -18,10 +22,7 @@ const_format.workspace = true
 futures.workspace = true
 indoc.workspace = true
 openssl.workspace = true
-product-config.workspace = true
 snafu.workspace = true
-stackable-operator.workspace = true
-stackable-versioned.workspace = true
 strum.workspace = true
 tokio.workspace = true
 tracing.workspace = true
