--- a/tests/templates/kuttl/listener/21-copy-scripts.yaml
+++ b/tests/templates/kuttl/listener/21-copy-scripts.yaml
@@ -2,4 +2,5 @@
 apiVersion: kuttl.dev/v1beta1
 kind: TestStep
 commands:
-  - script: kubectl cp -n $NAMESPACE ./check-active-workers.py  trino-test-helper-0:/tmp || true
+  - script: kubectl cp -n $NAMESPACE ../../../../templates/kuttl/commons/check-active-workers.py trino-test-helper-0:/tmp || true
+  
