--- a/tests/templates/kuttl/authentication/05-assert.yaml
+++ b/tests/templates/kuttl/authentication/05-assert.yaml
@@ -6,7 +6,7 @@ timeout: 300
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: test-trino
+  name: trino-test-helper
 status:
   readyReplicas: 1
   replicas: 1
