adapt getting started to listener

--- a/docs/modules/trino/examples/getting_started/code/trino.yaml
+++ b/docs/modules/trino/examples/getting_started/code/trino.yaml
@@ -10,8 +10,9 @@ spec:
     catalogLabelSelector:
       matchLabels:
         trino: simple-trino
-    listenerClass: external-unstable
   coordinators:
+    config:
+      listenerClass: external-unstable
     roleGroups:
       default:
         replicas: 1
