--- a/tests/templates/kuttl/listener/10-assert.yaml
+++ b/tests/templates/kuttl/listener/10-assert.yaml
@@ -40,7 +40,7 @@ status:
 apiVersion: v1
 kind: Service
 metadata:
-  name: test-trino-coordinator-default
+  name: test-trino-coordinator
 spec:
   type: NodePort # external-unstable - by listener op
 ---
