fix listener examples / comments

--- a/docs/modules/trino/examples/getting_started/code/trino.yaml
+++ b/docs/modules/trino/examples/getting_started/code/trino.yaml
@@ -11,7 +11,7 @@ spec:
       matchLabels:
         trino: simple-trino
   coordinators:
-    config:
+    roleConfig:
       listenerClass: external-unstable
     roleGroups:
       default:
