--- a/tests/templates/kuttl/smoke_aws/21-copy-scripts.yaml
+++ b/tests/templates/kuttl/smoke_aws/21-copy-scripts.yaml
@@ -5,3 +5,4 @@ commands:
   - script: kubectl cp -n $NAMESPACE ./check-active-workers.py  trino-test-helper-0:/tmp || true
   - script: kubectl cp -n $NAMESPACE ./check-opa.py             trino-test-helper-0:/tmp || true
   - script: kubectl cp -n $NAMESPACE ./check-s3.py              trino-test-helper-0:/tmp || true
+  - script: kubectl cp -n $NAMESPACE ./check-metrics.py         trino-test-helper-0:/tmp || true
