Feat: Trino Listener Integration (#753)
* add listener to roles

* wip - adapt role and rolegroup access

* remove unused error

* fmt

* fix tests

* fmt

* regenerated charts

* add docs

* wip - working

* make headless service name a function

* added tests

* adapted changelog

* move scripts to commons folder, fix tests

* new lines

* fix tls test

* fix authentication test

* fix opa test

* attempt to fix

* adapt getting started to listener

* use role level listener

* add lost comment

* fix listener examples / comments

* Apply suggestions from code review

Co-authored-by: Nick <10092581+NickLarsenNZ@users.noreply.github.com>

* clippy

* fix smoke test

* fix tls test

* fix authorization test

* regenerate charts

* fix metrics test for lsitener changes

* fix test

* Update rust/operator-binary/src/crd/mod.rs

Co-authored-by: Nick <10092581+NickLarsenNZ@users.noreply.github.com>

* Update rust/operator-binary/src/crd/mod.rs

Co-authored-by: Nick <10092581+NickLarsenNZ@users.noreply.github.com>

* fmt

* fix app version

* remove merge artifact

* adapt readme for smoke aws test

* move rolegroup_metrics_service_name out of cluster impl

* typo

---------

Co-authored-by: Nick <10092581+NickLarsenNZ@users.noreply.github.com>

--- a/deploy/helm/trino-operator/crds/crds.yaml
+++ b/deploy/helm/trino-operator/crds/crds.yaml
@@ -105,23 +105,6 @@ spec:
                           description: matchLabels is a map of {key,value} pairs. A single {key,value} in the matchLabels map is equivalent to an element of matchExpressions, whose key field is "key", the operator is "In", and the values array contains only "value". The requirements are ANDed.
                           type: object
                       type: object
-                    listenerClass:
-                      default: cluster-internal
-                      description: |-
-                        This field controls which type of Service the Operator creates for this TrinoCluster:
-
-                        * cluster-internal: Use a ClusterIP service
-
-                        * external-unstable: Use a NodePort service
-
-                        * external-stable: Use a LoadBalancer service
-
-                        This is a temporary solution with the goal to keep yaml manifests forward compatible. In the future, this setting will control which [ListenerClass](https://docs.stackable.tech/home/nightly/listener-operator/listenerclass.html) will be used to expose the service, and ListenerClass names will stay the same, allowing for a non-breaking change.
-                      enum:
-                        - cluster-internal
-                        - external-unstable
-                        - external-stable
-                      type: string
                     tls:
                       default:
                         internalSecretClass: tls
@@ -436,11 +419,16 @@ spec:
                       x-kubernetes-preserve-unknown-fields: true
                     roleConfig:
                       default:
+                        listenerClass: cluster-internal
                         podDisruptionBudget:
                           enabled: true
                           maxUnavailable: null
                       description: This is a product-agnostic RoleConfig, which is sufficient for most of the products.
                       properties:
+                        listenerClass:
+                          default: cluster-internal
+                          description: This field controls which [ListenerClass](https://docs.stackable.tech/home/nightly/listener-operator/listenerclass.html) is used to expose the coordinator.
+                          type: string
                         podDisruptionBudget:
                           default:
                             enabled: true
