revert: remove headless worker service

--- a/tests/templates/kuttl/listener/10-assert.yaml
+++ b/tests/templates/kuttl/listener/10-assert.yaml
@@ -61,6 +61,13 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
+  name: test-trino-worker-default-headless
+spec:
+  type: ClusterIP # by trino op
+---
+apiVersion: v1
+kind: Service
+metadata:
   name: test-trino-worker-default-metrics
 spec:
   type: ClusterIP # by trino op
