test: fault-tolerant execution integration test

--- a/tests/test-definition.yaml
+++ b/tests/test-definition.yaml
@@ -111,6 +111,10 @@ tests:
       - opa
       - keycloak
       - openshift
+  - name: fault-tolerant-execution
+    dimensions:
+      - trino
+      - openshift
   - name: listener
     dimensions:
       - trino
